syntax = "proto3";

package proto;

import "gc/proto/formula.proto";

// general computing service
service Computer {
  rpc QueryDB(Pipeline) returns (ResultSet) {}
  rpc DeleteDB(Filter) returns (Empty) {}
  rpc InsertDB(NewRecords) returns (Empty) {}
  rpc UpdateDB(UpdateRecords) returns (Empty) {}
}

message ResultSet {
  repeated string columns = 1;
  repeated Result row = 2;
}

message Result {
  repeated string value = 1;
}


message Pipelines {
  repeated Pipeline pipelines = 1;
}

message NewRecords {
  string table = 1;
  ResultSet records = 2;
}

message UpdateRecords {
  string table = 1;
  ResultSet records = 2;
  Expression condition = 3;
}

message Empty {
}